@@ -14,6 +14,7 @@
 * Quickpay integration: Update notification parser to handle API v6 [larspind]
 * Sage gateway: Deprecate #credit call [duff]
 * Update notification generator to better match current notification class [lulalala]
+* Paymill gateway: Change .com -> .de [louiskearns]
 
 == Version 1.32.1 (April 4, 2013)
 
